
	* backend/microtek2.h doc/descriptions/microtek2.desc: New
	  version: 0.96. Added Genius ColorPage-EP (from Karsten Festag
	  <karsten.festag@gmx.de>). 
	* doc/descriptions/unsupported.desc: Added link to artiscan 9600
	  project. Removed Genius ColorPage-EP.
	* configure.in include/sane/config.h.in: Removed dangling
	  quotation mark.

2004-10-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-find-scanner.c: Fixed compilation problem when
	  compiled without libusb support. Print sane-backends version
	  number. Print if built without libusb.
	
	* backend/microtek2.c backend/microtek2.h: Added backend version
	  200410042220 from Karsten Festag <karsten.festag@gmx.de>.  While
	  attaching devices only read attributes from source 0 (=
	  MD_SOURCE_FLATBED), others give wrong results. Better handling of
	  different shading depths. Including model ColorPage-EP. Workaround
	  for firmware bug for V300 (FW < 2.70). Workaround for firmware bug
	  with odd pixel numbers. Bugfix for lamp switching when using
	  LightLid35 Transparency Adaptor.

	* tools/check-usb-chip.c: Added test for interface 1 and
	  altsetting 2 for GT-8911. Unified ouitput. Formatting updates.

2004-10-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-find-scanner.man tools/check-usb-chip.c
	  tools/sane-find-scanner.c: sane-find-scanner can now load USB
	  descriptors from /proc/bus/usb/devices dumps (e.g. from the
	  unsupported scanner web pages). Minor modifications to some of
	  the chipset tests.
	
2004-10-04  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.h backend/hp.c backend/hp-scl.c:
	  Fixed bug #300973 (renamed global function hp_init_openfd
	  to sanei_hp_init_openfd

2004-10-04  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Fixed bug #300963.
	* doc/plustek/Plustek-USB.changes: Update.
	* po/*.po: Update.

2004-10-03  Thomas Soumarmon <thomas.soumarmon@cogitae.net>

	* backend/hp5400_debug.c backend/hp5400_debug.h 